# inference-engine

./: .gitignore  CMakeLists.txt  LICENSE  colab_gpt2_inference.ipynb  readme.md
src/: gguf_loader.cpp  gguf_loader.h  kv_cache.cpp  layers.cpp  layers.hpp  main.cpp  model.cpp  model.hpp  tokenizer.cpp
tests/: CMakeLists.txt  common_test.hpp  run_tests.cpp  test_attention.cpp  test_ffn.cpp  test_forward_pass.cpp  test_gguf_loader.cpp  test_layer_norm.cpp  test_model_loading.cpp
